<resources>
    <!-- App Name -->
    <string name="app_name">Car Parking</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="login2">Login</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_here">Register here</string>
    <string name="sign_in">Sign In</string>

    <!-- Registration Screen -->
    <string name="registration">Registration</string>
    <string name="register_form">Register Form</string>
    <string name="name">Name</string>
    <string name="name2">Name</string>
    <string name="phone">Phone</string>
    <string name="phone2">Phone</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="address2">Address</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Main Screen -->
    <string name="welcome">Welcome</string>
    <string name="find_parking">Find Parking</string>
    <string name="my_bookings">My Bookings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- User Item -->
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="registeration_no">Registration No</string>

    <!-- API Configuration -->
    <!-- These values will be overridden by build.gradle.kts -->
    <string name="maps_api_key">@string/maps_api_key</string>

    <!-- Parking Search Layout -->
    <string name="search_parking">Search Parking</string>
    <string name="enter_location">Enter location</string>
    <string name="filter_options">Filter Options</string>
    <string name="all">All</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="view_on_map">View on Map</string>
</resources>