<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingTop="4dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textSize="14sp"
        android:paddingTop="2dp"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="14sp"
        android:paddingTop="2dp"/>

    <TextView
        android:id="@+id/registration_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeration_no"
        android:textSize="14sp"
        android:paddingTop="2dp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address2"
        android:textSize="14sp"
        android:paddingTop="2dp"
        android:paddingBottom="8dp"/>
</LinearLayout>
