<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/primary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/surface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/text_primary"
                android:paddingBottom="16dp" />

            <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text"
                android:background="@color/white"
                android:padding="12dp"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@color/white"
                android:padding="12dp"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="12dp"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone_no"
                android:inputType="number"
                android:background="@color/white"
                android:padding="12dp"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/et5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="text"
                android:background="@color/white"
                android:padding="12dp"
                android:textColorHint="@color/text_secondary"
                android:textColor="@color/text_primary"
                android:layout_marginBottom="20dp"/>


            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/register"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/white"
                android:padding="12dp"
                android:textStyle="bold"
                android:clickable="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/text_primary"
                    android:paddingTop="8dp"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textColor="@color/text_primary"
                    android:clickable="true"
                    android:layout_marginStart="8dp"
                    android:focusable="true" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>